myproject-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject-db-deployment
  labels:
    app: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myproject
  template:
    metadata:
      labels:
        app: myproject
    spec:
      containers:
        - name: db
          image: krishnavamshi933/postgres:latest
          ports:
            - containerPort: 5432
