myproject-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myproject-service
spec:
  selector:
    app: myproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
