myproject.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myproject
  template:
    metadata:
      labels:
        app: myproject
    spec:
      containers:
        - name: web
          image: krishnavamshi933/myprojectdir-web:latest
          ports:
            - containerPort: 8000
        - name: db
          image: krishnavamshi933/postgres:latest
          ports:
            - containerPort: 5432
        - name: nginx
          image: krishnavamshi933/nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myproject-service
spec:
  selector:
    app: myproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
